// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Seaport gas fulfillAdvancedOrder 1`] = `
Object {
  "calldataByteLength": 2084,
<<<<<<< HEAD
  "gasUsed": 209034,
=======
  "gasUsed": 208855,
}
`;

exports[`Seaport gas fulfillAvailableAdvancedOrders 1 orders 1`] = `
Object {
  "calldataByteLength": 4740,
  "gasUsed": 347632,
>>>>>>> origin/main
}
`;

exports[`Seaport gas fulfillOrder 1`] = `
Object {
  "calldataByteLength": 1828,
<<<<<<< HEAD
  "gasUsed": 202260,
=======
  "gasUsed": 202081,
>>>>>>> origin/main
}
`;
